# study-buddy-hub

./: vite.config.ts
backend/: .env  README.md  main.py  pyproject.toml  users_db.json
backend/vector_db/: index.faiss  index.pkl
backend/vector_db-nomic/: index.pkl
frontend/: index.html  tailwind.config.ts
frontend/.github/workflows/: deploy.yml
frontend/src/: App.tsx
frontend/src/components/: ConnectionStatus.tsx  DocumentList.tsx  Header.tsx  HeroSection.tsx  LoginForm.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Index.tsx
src/: App.tsx  index.css
src/components/: ChatInterface.tsx  ConnectionStatus.tsx  DocumentList.tsx  DocumentUpload.tsx  Header.tsx
src/components/ui/: button.tsx
src/contexts/: AuthContext.tsx
src/lib/: api.ts
src/pages/: Index.tsx
